fix: ajuste de z-index do botao

--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -3,6 +3,10 @@
     grid-template-columns: 1fr;
 }
 
+.header_container {
+    z-index: 2;
+}
+
 .section1 {
     margin-top: 120px;
     height: 450px;
@@ -10,7 +14,7 @@
     background-size: cover;
     background-position: center;
     opacity: 0.9;
-    z-index: -1;
+    z-index: 0;
 } 
 
 .section1_content {
